--- a/wp-content/themes/cmp/assets/styles/pages/_event-spaces.scss
+++ b/wp-content/themes/cmp/assets/styles/pages/_event-spaces.scss
@@ -55,6 +55,7 @@
         object-fit: cover;
         object-position: center;
         min-height: 275px;
+        min-width: 100%;
         // display: none;
       }
 
